instdir="${prefix}/include/iljit/"

inst_HEADERS = 				\
	cli_manager.h			\
	lib_string.h			\
	lib_stringBuilder.h		\
	lib_array.h			\
	lib_reflect.h			\
	lib_runtimehandle.h		\
	lib_typedReference.h		\
	lib_vararg.h			\
	lib_decimal.h			\
	lib_culture.h			\
	lib_delegates.h			\
	lib_thread.h			\
	lib_net.h			\
	lib_pinvoke.h			\
	cil_stack.h			\
	layout_manager.h		\
	ilmethod.h

EXTRA_DIST = 				\
	cli_manager.h			\
	lib_string.h			\
	lib_stringBuilder.h		\
	lib_array.h			\
	lib_reflect.h			\
	lib_runtimehandle.h		\
	lib_typedReference.h		\
	lib_vararg.h			\
	lib_decimal.h			\
	lib_culture.h			\
	lib_delegates.h			\
	lib_thread.h			\
	lib_net.h			\
	lib_pinvoke.h			\
	cil_stack.h			\
	layout_manager.h		\
	ilmethod.h
	
MAINTAINERCLEANFILES = Makefile.in $(inst_HEADERS)	
